--- a/order_completion.html
+++ b/order_completion.html
@@ -1,5 +1,5 @@
 <head>
-  <script src="http://shred-117275-ylok2a4pjxiiakfh.westus.cloudapp.azure.com/Skate/confirmOrder?orderId=38722"/>
+  <script src="http://shred-117275-ylok2a4pjxiiakfh.westus.cloudapp.azure.com/Skate/confirmOrder?orderId=38722"></script>
 </head>
 <body>
 <h1>Auto-completion of your order</h1>
